Closed
Bug 1398045
Opened 5 years ago
Closed 5 years ago
Crash in mozilla::extensions::detail::ChannelHolder::MaybeChannel
Categories
(WebExtensions :: Request Handling, defect)
Tracking
(firefox-esr52 unaffected, firefox55 unaffected, firefox56 unaffected, firefox57 fixed)
VERIFIED
FIXED
mozilla57
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox55 | --- | unaffected |
firefox56 | --- | unaffected |
firefox57 | --- | fixed |
People
(Reporter: calixte, Assigned: kmag)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression, topcrash, Whiteboard: [clouseau])
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is report bp-fefeaab2-2f80-46b2-97f4-77a470170908. ============================================================= There are 137 crashes in nightly 57 with buildid 20170907220212. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1396856. [1] https://hg.mozilla.org/mozilla-central/rev?node=223a7c5a7c471f5fbf319029da2dcc5a093b8548
Flags: needinfo?(kmaglione+bmo)
Reporter | ||
Updated•5 years ago
|
Crash Signature: [@ mozilla::extensions::detail::ChannelHolder::MaybeChannel] → [@ mozilla::extensions::detail::ChannelHolder::MaybeChannel]
[@ mozilla::dom::ChannelWrapperBinding::get_channel]
Reporter | ||
Comment 1•5 years ago
|
||
The signature 'mozilla::extensions::detail::ChannelHolder::MaybeChannel' is ranked #4 in top-crashers for browser process.
Keywords: topcrash
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → kmaglione+bmo
Flags: needinfo?(kmaglione+bmo)
Comment hidden (mozreview-request) |
Comment 3•5 years ago
|
||
mozreview-review |
Comment on attachment 8906006 [details] Bug 1398045: Correctly handle channels that don't support weak references. https://reviewboard.mozilla.org/r/177760/#review182832
Attachment #8906006 -
Flags: review?(mixedpuppy) → review+
Assignee | ||
Comment 4•5 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/c5047f299f6072182266ef9a9be65cd5d7a9b51b Bug 1398045: Correctly handle channels that don't support weak references. r=mixedpuppy
Pushed by maglione.k@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/c5047f299f60 Correctly handle channels that don't support weak references. r=mixedpuppy
Comment 6•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/c5047f299f60
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
![]() |
||
Comment 9•5 years ago
|
||
Good news: this was the #3 Windows topcrash in Nightly 20170908100218, but is absent in Nightly 20170908220146, which is the first build with this fix.
Status: RESOLVED → VERIFIED
Updated•4 years ago
|
Product: Toolkit → WebExtensions
You need to log in
before you can comment on or make changes to this bug.
Description
•