Bug 1398045: Correctly handle channels that don't support weak references. r=mixedpuppy

MozReview-Commit-ID: GX6zUAzVrBZ